--- a/catalog.html
+++ b/catalog.html
@@ -48,9 +48,9 @@
   <li><a href="#">APPAREL</a></li>
 </ul>
 
-<div class="item-container-1" data-toggle="modal" data-target="#heroes">
+<div class="item-container-1">
   <div class="title-container">
-    <a href="#"></a>
+    <a href="heroes.html"></a>
     <h2>HEROES</h2>
     <h3>Font Family</h3>
 
@@ -79,10 +79,10 @@
 <div class="item-container-4">
   <div class="title-container">
     <a href="heroes.html"></a>
-    <h2>CANDICONS</h2>
-    <h3>Icon Set</h3>
+    <h2>COMPASS SANS</h2>
+    <h3>Font Family</h3>
   </div>
-<img src="images/heroes/heroes-1.png" alt="#">
+<img src="images/compass/cs.png" alt="#">
 </div>
 
 <div class="item-container-5">
@@ -221,42 +221,6 @@ RECENT BLOG POSTS
     <li><a href="#"><img src="images/footer/facebook.svg" alt="link to Facebook"></a></li>
   </ul>
 </footer>
-
-
-
-<!-- MODALS -->
-
-<!-- HEROES MODAL -->
-
-<div class="modal fade" id="heroes" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" id="modal">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Heroes Font Family</h5>
-
-
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body col-12">
-
-
-
-
-                <!-- END HEROES TYPEFACE -->
-      </div><!-- CLOSES MODAL BODY CONTAINER-1 -->
-
-
-
-
-
-    </div>
-  </div>
-</div>
-    </div>
-
-    <!-- CLOSES HEROES MODAL -->
 
 </div> <!-- Closes Grid Container -->
 
