--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   <nav class="col-12 col-lg-2 float-left">
     <ul class="col-12 col-lg-6 offset-lg-3 float-left p-0">
       <li class="logo-container"><a href="index.html"><img src="images/logo.svg" alt="#" class="logo"></a></li>
-      <li><a href="index.html" id="active">Home</a></li>
-      <li><a href="catalog.html">Catalog</a></li>
-      <li><a href="index.html">Blog</a></li>
-      <li><a href="index.html">Contact</a></li>
+      <li class="nav-item"><a href="index.html" id="active">Home</a></li>
+      <li class="nav-item"><a href="catalog.html">Catalog</a></li>
+      <li class="nav-item"><a href="index.html">Blog</a></li>
+      <li class="nav-item"><a href="index.html">Contact</a></li>
     </ul>
 
-    <ul class="social-media-xl float-left col-lg-6 offset-lg-3">
+    <ul class="social-media-xl float-left col-lg-6 offset-lg-2 p-0">
       <li class="col-12"><a href="https://www.etsy.com/shop/Z2Design?ref=seller-platform-mcnav" target="_blank"><img src="images/footer/etsy.svg" alt="link to Etsy"></a></li>
       <li class="col-12"><a href="#"><img src="images/footer/instagram.svg" alt="link to Instagram"></a></li>
       <li class="col-12"><a href="#"><img src="images/footer/facebook.svg" alt="link to Facebook"></a></li>
