--- a/catalog.html
+++ b/catalog.html
@@ -23,10 +23,10 @@
   <nav class="col-12 col-lg-2 float-left">
     <ul class="col-12 col-lg-6 offset-lg-3 float-left p-0">
       <li class="logo-container"><a href="index.html"><img src="images/logo.svg" alt="#" class="logo"></a></li>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="catalog.html" id="active">Catalog</a></li>
-      <li><a href="index.html">Blog</a></li>
-      <li><a href="index.html">Contact</a></li>
+      <li class="nav-item"><a href="index.html">Home</a></li>
+      <li class="nav-item"><a href="catalog.html" id="active">Catalog</a></li>
+      <li class="nav-item"><a href="index.html">Blog</a></li>
+      <li class="nav-item"><a href="index.html">Contact</a></li>
     </ul>
 
     <ul class="social-media-xl float-left col-lg-6 offset-lg-3">
@@ -37,7 +37,7 @@
   </nav>
 
 
-<div class="main-container col-lg-10 float-left float-lg-right">
+<div class="main-container col-12 col-lg-10 float-left float-lg-right">
   <main class="col-12 col-xl-10 offset-xl-1 p-xl-0" id="main-catalog">
 
 <h1>CATALOG</h1>
@@ -167,52 +167,6 @@
  -->
 
 
-<div class="featured-blogs-container col-12 col-lg-10 float-left float-lg-right">
-  <div class="featured-blogs float-left" id="featured-blogs">
-
-<h2>
-RECENT BLOG POSTS
-</h2>
-
-<div class="item-container-1">
-  <div class="title-container">
-    <a href="#"></a>
-    <h2>HEROES</h2>
-    <h3>Font Family</h3>
-
-  </div>
-<img src="images/heroes/heroes-1.png" alt="Heroes Typeface Overview">
-</div>
-
-<div class="item-container-2">
-  <div class="title-container">
-    <a href="#"></a>
-    <h2>OVERLAP</h2>
-    <h3>Font Family</h3>
-  </div>
-<img src="images/overlap/overlap.png" alt="Overlap Typeface Overview">
-</div>
-
-<div class="item-container-3">
-  <div class="title-container">
-    <a href="#"></a>
-    <h2>CANDICONS</h2>
-    <h3>Icon Set</h3>
-  </div>
-<img src="images/heroes/heroes-1.png" alt="#">
-</div>
-
-<div class="item-container-4">
-  <div class="title-container">
-    <a href="#"></a>
-    <h2>CANDICONS</h2>
-    <h3>Icon Set</h3>
-  </div>
-<img src="images/heroes/heroes-1.png" alt="#">
-</div>
-
-</div>
-</div>
 
 <footer class="col-12 p-0 float-left">
   <ul class="float-left">
