--- a/fonts.html
+++ b/fonts.html
@@ -37,7 +37,7 @@
   </nav>
 
 
-<div class="main-container col-lg-10 float-left float-lg-right">
+<div class="main-container col-lg-10 float-left float-lg-right p-0">
   <main class="container-mixitup containMix col-12 col-xl-10 offset-xl-1 p-xl-0" id="main-catalog">
 
 <h1>CATALOG</h1>
