--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-<div class="container-fluid"> <!-- Opens Grid Container -->
+<div class="container-fluid col-12"> <!-- Opens Grid Container -->
 
   <nav class="col-12 col-lg-2 float-left">
     <ul class="col-12 col-lg-6 offset-lg-3 float-left p-0">
@@ -48,8 +48,8 @@ Functional and focused designs for intentional people. In throw-away society fil
 
 </article>
 
-<div class="main-container col-lg-10 float-left float-lg-right">
-  <main class="col-12 col-xl-10 offset-xl-1 p-xl-0" id="main-home">
+<div class="main-container col-12 col-lg-10 float-left float-lg-right">
+<main class="main-home col-12 float-left">
 
 <h2>FEATURED PRODUCTS</h2>
 
@@ -112,52 +112,7 @@ Functional and focused designs for intentional people. In throw-away society fil
   </main>
 </div>
 
-<div class="featured-blogs-container col-12 col-lg-10 float-left float-lg-right">
-  <div class="featured-blogs float-left" id="featured-blogs">
 
-<h2>
-RECENT BLOG POSTS
-</h2>
-
-<div class="item-container-1">
-  <div class="title-container">
-    <a href="#"></a>
-    <h2>HEROES</h2>
-    <h3>Font Family</h3>
-
-  </div>
-<img src="images/heroes/heroes-1.png" alt="Heroes Typeface Overview">
-</div>
-
-<div class="item-container-2">
-  <div class="title-container">
-    <a href="#"></a>
-    <h2>OVERLAP</h2>
-    <h3>Font Family</h3>
-  </div>
-<img src="images/overlap/overlap.png" alt="Overlap Typeface Overview">
-</div>
-
-<div class="item-container-3">
-  <div class="title-container">
-    <a href="#"></a>
-    <h2>CANDICONS</h2>
-    <h3>Icon Set</h3>
-  </div>
-<img src="images/heroes/heroes-1.png" alt="#">
-</div>
-
-<div class="item-container-4">
-  <div class="title-container">
-    <a href="#"></a>
-    <h2>CANDICONS</h2>
-    <h3>Icon Set</h3>
-  </div>
-<img src="images/heroes/heroes-1.png" alt="#">
-</div>
-
-</div>
-</div>
 
 <footer class="col-12 p-0 float-left">
   <ul class="float-left">
