--- a/heroes.html
+++ b/heroes.html
@@ -37,7 +37,7 @@
   </nav>
 
 
-<div class="main-container col-lg-10 float-left float-lg-right">
+<div class="main-container col-12 col-lg-10 float-left float-lg-right">
   <main class="main-catalog-item col-12 col-xl-10 offset-xl-1 p-xl-0">
 
     <ul class="catalog-subnav-breadcrumb col-12 float-left p-0">
@@ -79,7 +79,7 @@
                     "demo").innerHTML = x;
               }
           </script>
-          
+
 
             </div>
 
@@ -178,7 +178,7 @@
                   </script>
                   </div>
 
-                  <div class="photo-container col-12 col-lg-6 offset-xl-1 float-left"><!-- OPENS MODAL BODY CONTAINER-2-->
+                  <div class="photo-container col-12 col-lg-6 offset-xl-1 p-0 float-left"><!-- OPENS MODAL BODY CONTAINER-2-->
                     <img src="images/heroes/heroes-1.png" alt="#" class="col-4 col-lg-6 float-left">
                     <img src="images/heroes/heroes-1.png" alt="#" class="col-4 col-lg-6 float-left">
                     <img src="images/heroes/heroes-1.png" alt="#" class="col-4 col-lg-6 float-left">
@@ -191,52 +191,6 @@
   </main>
 </div>
 
-<div class="featured-blogs-container col-12 col-lg-10 float-left float-lg-right">
-  <div class="featured-blogs float-left" id="featured-blogs">
-
-<h2>
-RECENT BLOG POSTS
-</h2>
-
-<div class="item-container-1">
-  <div class="title-container">
-    <a href="#"></a>
-    <h2>HEROES</h2>
-    <h3>Font Family</h3>
-
-  </div>
-<img src="images/heroes/heroes-1.png" alt="Heroes Typeface Overview">
-</div>
-
-<div class="item-container-2">
-  <div class="title-container">
-    <a href="#"></a>
-    <h2>OVERLAP</h2>
-    <h3>Font Family</h3>
-  </div>
-<img src="images/overlap/overlap.png" alt="Overlap Typeface Overview">
-</div>
-
-<div class="item-container-3">
-  <div class="title-container">
-    <a href="#"></a>
-    <h2>CANDICONS</h2>
-    <h3>Icon Set</h3>
-  </div>
-<img src="images/heroes/heroes-1.png" alt="#">
-</div>
-
-<div class="item-container-4">
-  <div class="title-container">
-    <a href="#"></a>
-    <h2>CANDICONS</h2>
-    <h3>Icon Set</h3>
-  </div>
-<img src="images/heroes/heroes-1.png" alt="#">
-</div>
-
-</div>
-</div>
 
 <footer class="col-12 p-0 float-left">
   <ul class="float-left">
