--- a/heroes.html
+++ b/heroes.html
@@ -23,8 +23,8 @@
   <nav class="col-12 col-lg-2 float-left">
     <ul class="col-12 col-lg-6 offset-lg-3 float-left p-0">
       <li class="logo-container"><a href="index.html"><img src="images/logo.svg" alt="#" class="logo"></a></li>
-      <li><a href="index.html" id="active">Home</a></li>
-      <li><a href="catalog.html">Catalog</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="catalog.html" id="active">Catalog</a></li>
       <li><a href="index.html">Blog</a></li>
       <li><a href="index.html">Contact</a></li>
     </ul>
