--- a/catalog.html
+++ b/catalog.html
@@ -38,7 +38,7 @@
 
 
 <div class="main-container col-12 col-lg-10 float-left float-lg-right">
-  <main class="col-12 col-xl-10 offset-xl-1 p-xl-0" id="main-catalog">
+  <main class="main-catalog col-12 col-xl-10 offset-xl-1 p-xl-0">
 
 <h1>CATALOG</h1>
 <ul>
