--- a/fonts.html
+++ b/fonts.html
@@ -92,7 +92,8 @@
 
 <div class="main-container col-lg-10 float-left float-lg-right p-0" id="similar-products">
   <div class="main-catalog float-left col-12 col-xl-10 offset-xl-1 p-xl-0">
-<div class="item-container-1" data-toggle="modal" data-target="#heroes">
+    <h2>SIMILAR PRODUCTS</h2>
+<div class="item-container-1">
   <div class="title-container">
     <a href="#"></a>
     <h2>HEROES</h2>
