--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@ Functional and focused designs for intentional people. In throw-away society fil
 
 <div class="item-container-3">
   <div class="title-container">
-    <a href="#"></a>
-    <h2>CANDICONS</h2>
-    <h3>Icon Set</h3>
+    <a href="compass.html"></a>
+    <h2>COMPASS SANS</h2>
+    <h3>Font Family</h3>
   </div>
-<img src="images/heroes/heroes-1.png" alt="#">
+<img src="images/compass/cs.png" alt="#">
 </div>
 
 <div class="item-container-4">
