--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@ Functional and focused designs for intentional people. In throw-away society fil
 </article>
 
 <div class="main-container col-12 col-lg-10 float-left float-lg-right">
-<main class="main-home col-12 float-left">
+  <div class="col-12 col-xl-10 offset-xl-1 p-0">
+<main class="main-home col-12 col-lg-10">
 
 <h2>FEATURED PRODUCTS</h2>
 
@@ -110,6 +111,7 @@ Functional and focused designs for intentional people. In throw-away society fil
 
 
   </main>
+  </div>
 </div>
 
 
