--- a/catalog.html
+++ b/catalog.html
@@ -166,6 +166,99 @@
 </button>
  -->
 
+ <div id='product-component-1594140064166' class="cart"></div>
+<script type="text/javascript">
+/*<![CDATA[*/
+(function () {
+ var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
+ if (window.ShopifyBuy) {
+   if (window.ShopifyBuy.UI) {
+     ShopifyBuyInit();
+   } else {
+     loadScript();
+   }
+ } else {
+   loadScript();
+ }
+ function loadScript() {
+   var script = document.createElement('script');
+   script.async = true;
+   script.src = scriptURL;
+   (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
+   script.onload = ShopifyBuyInit;
+ }
+ function ShopifyBuyInit() {
+   var client = ShopifyBuy.buildClient({
+     domain: 'z2-design-studio.myshopify.com',
+     storefrontAccessToken: '6cf677fb0540a098e4f782c9b3a29eb2',
+   });
+   ShopifyBuy.UI.onReady(client).then(function (ui) {
+     ui.createComponent('product', {
+       id: '5422125383844',
+       node: document.getElementById('product-component-1594140064166'),
+       moneyFormat: '%24%7B%7Bamount%7D%7D',
+       options: {
+ "product": {
+   "styles": {
+     "product": {
+       "@media (min-width: 601px)": {
+         "max-width": "calc(25% - 20px)",
+         "margin-left": "20px",
+         "margin-bottom": "50px"
+       }
+     }
+   },
+   "contents": {
+     "img": false,
+     "title": false,
+     "price": false
+   },
+   "text": {
+     "button": "Add to cart"
+   }
+ },
+ "productSet": {
+   "styles": {
+     "products": {
+       "@media (min-width: 601px)": {
+         "margin-left": "-20px"
+       }
+     }
+   }
+ },
+ "modalProduct": {
+   "contents": {
+     "img": false,
+     "imgWithCarousel": true,
+     "button": false,
+     "buttonWithQuantity": true
+   },
+   "styles": {
+     "product": {
+       "@media (min-width: 601px)": {
+         "max-width": "100%",
+         "margin-left": "0px",
+         "margin-bottom": "0px"
+       }
+     }
+   },
+   "text": {
+     "button": "Add to cart"
+   }
+ },
+ "cart": {
+   "text": {
+     "total": "Subtotal",
+     "button": "Checkout"
+   }
+ }
+},
+     });
+   });
+ }
+})();
+/*]]>*/
+</script>
 
 
 <footer class="col-12 p-0 float-left">
