--- a/catalog.html
+++ b/catalog.html
@@ -165,8 +165,8 @@
   Launch demo modal
 </button>
  -->
-
- <div id='product-component-1594140064166' class="cart"></div>
+<div class="catalog">
+ <div id='product-component-1594140064166'></div>
 <script type="text/javascript">
 /*<![CDATA[*/
 (function () {
@@ -259,7 +259,7 @@
 })();
 /*]]>*/
 </script>
-
+</div>
 
 <footer class="col-12 p-0 float-left">
   <ul class="float-left">
