--- a/catalog.html
+++ b/catalog.html
@@ -88,10 +88,10 @@
 <div class="item-container-5">
   <div class="title-container">
     <a href="#"></a>
-    <h2>CANDICONS</h2>
-    <h3>Icon Set</h3>
+    <h2>SKETCHBOOK</h2>
+    <h3>Hand-Bound Sketchbook</h3>
   </div>
-<img src="images/candicons/candicons.png" alt="#">
+<img src="images/sketchbooks/sketchbooks.png" alt="#">
 </div>
 
 <div class="item-container-6">
