--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Functional and focused designs for intentional people. In throw-away society fil
 
 <div class="main-container col-12 col-lg-10 float-left float-lg-right">
   <div class="col-12 col-xl-10 offset-xl-1 p-0">
-<main class="main-home col-12 col-lg-10 p-0">
+<main class="main-home col-12 col-lg-10 p-xl-0">
 
 <h2>FEATURED PRODUCTS</h2>
 
