--- a/catalog.html
+++ b/catalog.html
@@ -97,10 +97,10 @@
 <div class="item-container-6">
   <div class="title-container">
     <a href="#"></a>
-    <h2>CANDICONS</h2>
+    <h2>CAFE CANDICONS</h2>
     <h3>Icon Set</h3>
   </div>
-<img src="images/heroes/heroes-1.png" alt="#">
+<img src="images/cafe/cafe.png" alt="#">
 </div>
 
 <div class="item-container-7">
