--- a/fonts.html
+++ b/fonts.html
@@ -70,10 +70,10 @@
 <div class="item-container-3">
   <div class="title-container">
     <a href="#"></a>
-    <h2>CANDICONS</h2>
-    <h3>Icon Set</h3>
+    <h2>COMPASS SANS</h2>
+    <h3>Font Family</h3>
   </div>
-<img src="images/heroes/heroes-1.png" alt="#">
+<img src="images/compass/cs.png" alt="Compass Sans font family">
 </div>
 
 <div class="item-container-4">
@@ -118,7 +118,7 @@
     <h2>CANDICONS</h2>
     <h3>Icon Set</h3>
   </div>
-<img src="images/heroes/heroes-1.png" alt="#">
+<img src="images/compass/cs.png" alt="#">
 </div>
 
 <div class="item-container-4">
