--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@ Functional and focused designs for intentional people. In throw-away society fil
 <div class="item-container-4">
   <div class="title-container">
     <a href="#"></a>
-    <h2>CANDICONS</h2>
+    <h2>CAFE ICONS</h2>
     <h3>Icon Set</h3>
   </div>
-<img src="images/heroes/heroes-1.png" alt="#">
+<img src="images/cafe/cafe.png" alt="#">
 </div>
 
 <div class="item-container-5">
