--- a/catalog.html
+++ b/catalog.html
@@ -106,10 +106,10 @@
 <div class="item-container-7">
   <div class="title-container">
     <a href="#"></a>
-    <h2>CANDICONS</h2>
-    <h3>Icon Set</h3>
+    <h2>PRIDE</h2>
+    <h3>Product Line</h3>
   </div>
-<img src="images/heroes/heroes-1.png" alt="#">
+<img src="images/pride/pride.png" alt="#">
 </div>
 
 <div class="item-container-8">
