--- a/catalog.html
+++ b/catalog.html
@@ -115,10 +115,10 @@
 <div class="item-container-8">
   <div class="title-container">
     <a href="#"></a>
-    <h2>CANDICONS</h2>
-    <h3>Icon Set</h3>
+    <h2>WV EXPLORED</h2>
+    <h3>Prints</h3>
   </div>
-<img src="images/heroes/heroes-1.png" alt="#">
+<img src="images/prints-1/print-1.png" alt="#">
 </div>
 
 <div class="item-container-9">
