--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     </ul>
   </nav>
 
-<article class="col-12 col-lg-10 float-left float-lg-right">
+<article class="col-12 col-lg-10 float-left float-lg-right p-0">
 
 <h1 class="col-12 col-lg-10 offset-lg-1 float-left p-xl-0">
 Z₂ DESIGN
 </h1>
 
-<p class="col-12 col-lg-10 offset-lg-1 float-left p-xl-0">
+<p class="article-p col-12 col-lg-10 offset-lg-1 float-left p-xl-0">
 Functional and focused designs for intentional people. In throw-away society filled with endless options, we believe in remaining focused and goal oriented, and understand that reason we choose quality over quantity.
 </p>
 
