--- a/catalog.html
+++ b/catalog.html
@@ -60,7 +60,7 @@
 
 <div class="item-container-2">
   <div class="title-container">
-    <a href="#"></a>
+    <a href="overlap.html"></a>
     <h2>OVERLAP</h2>
     <h3>Font Family</h3>
   </div>
@@ -69,7 +69,7 @@
 
 <div class="item-container-3">
   <div class="title-container">
-    <a href="#"></a>
+    <a href="candicons.html"></a>
     <h2>CANDICONS</h2>
     <h3>Icon Set</h3>
   </div>
@@ -78,11 +78,18 @@
 
 <div class="item-container-4">
   <div class="title-container">
-    <a href="heroes.html"></a>
+    <a href="compass.html"></a>
     <h2>COMPASS SANS</h2>
     <h3>Font Family</h3>
   </div>
-<img src="images/compass/cs.png" alt="#">
+ <img src="images/compass/cs.png" alt="#">
+
+<!--
+<video autoplay loop muted>
+<source src="images/compass/cs.mp4" type="video/mp4">
+</video>
+-->
+
 </div>
 
 <div class="item-container-5">
@@ -96,7 +103,7 @@
 
 <div class="item-container-6">
   <div class="title-container">
-    <a href="#"></a>
+    <a href="cafe-icons.html"></a>
     <h2>CAFE CANDICONS</h2>
     <h3>Icon Set</h3>
   </div>
