--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Functional and focused designs for intentional people. In throw-away society fil
 
 <div class="item-container-1">
   <div class="title-container">
-    <a href="#"></a>
+    <a href="heroes.html"></a>
     <h2>HEROES</h2>
     <h3>Font Family</h3>
 
@@ -66,7 +66,7 @@ Functional and focused designs for intentional people. In throw-away society fil
 
 <div class="item-container-2">
   <div class="title-container">
-    <a href="#"></a>
+    <a href="overlap.html"></a>
     <h2>OVERLAP</h2>
     <h3>Font Family</h3>
   </div>
@@ -84,7 +84,7 @@ Functional and focused designs for intentional people. In throw-away society fil
 
 <div class="item-container-4">
   <div class="title-container">
-    <a href="#"></a>
+    <a href="cafe-icons.html"></a>
     <h2>CAFE ICONS</h2>
     <h3>Icon Set</h3>
   </div>
@@ -93,7 +93,7 @@ Functional and focused designs for intentional people. In throw-away society fil
 
 <div class="item-container-5">
   <div class="title-container">
-    <a href="#"></a>
+    <a href="candicons.html"></a>
     <h2>CANDICONS</h2>
     <h3>Icon Set</h3>
   </div>
